--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.6.2",
     "jquery": "^3.7.1",
     "json-server": "^0.17.4",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
